[package]
name = "raytracer-rs"
version = "0.1.0"
authors = ["Marcythm <marcythm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
image = "0.23"
indicatif = "0.15"

[features]
default = []
high-quality = []
